--- a/Proyecto-Libreria/src/main/resources/templates/usuarioEditar.html
+++ b/Proyecto-Libreria/src/main/resources/templates/usuarioEditar.html
@@ -15,8 +15,8 @@
 		<label th:text="${mensaje}"></label>
 		
 		<form th:action="'/modificarUsuario/' + ${id}" method="POST">
-			<input id="urlImagen" type="text" name="urlImagen"></input>
-			<input id="subirImagen" type="button"  value="Subir Imagen"></input>
+			<input id="urlImagen" type="text" name="urlImagen" th:value="${urlImagen}"></input>
+			<input id="subirImagen" type="button"  value="Cambiar foto"></input><br></br>
 			<input type="text" name="nombre" placeholder="Nombre de usuario" th:value="${nombreDeUsuario}"></input>
 			<input type="password" name="contrasenia" placeholder="Contraseña" th:value="${contrasenia}"></input>
 			<input type="submit" value="Enviar"></input>
