--- a/Proyecto-Libreria/src/main/resources/templates/ingresarLibro.html
+++ b/Proyecto-Libreria/src/main/resources/templates/ingresarLibro.html
@@ -7,6 +7,7 @@
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 		crossorigin="anonymous"></script>
 		<script src="/js/imagen.js"></script>
+		<script src="/js/listado.js"></script>
 		<meta charset="UTF-8"></meta>
 	</head>
 
@@ -15,13 +16,16 @@
 		<label th:text="${mensaje}"></label>
 		
 		<form action="/insertar-nuevoLibro" method="POST">
-		<input id="urlImagen" type="text" name="urlImagen"></input>
-			<input id="subirImagen" type="button"  value="Subir Imagen"></input>
-			<input type="text" name="titulo" placeholder="Titulo del libro" th:value="${titulo}"></input>
-			<input type="text" name="autor" placeholder="Autor/a" th:value="${autor}"></input>
-			<input type="text" name="editorial" placeholder="Editorial" th:value="${editorial}"></input>
-			<input type="number" name="anio" min="1800" max="2099" step="1" value="2018" />
-			<textarea name="sinopsis" th:value="${sinopsis}"></textarea>
+			<input id="urlImagen" type="text" hidden="hidden" name="urlImagen"></input>
+			<input id="subirImagen" type="button"  value="Subir Imagen"></input><br></br>
+			<input type="text" name="titulo" placeholder="Titulo del libro" th:value="${titulo}"></input><br></br>
+			<input type="text" name="autor" placeholder="Autor/a" th:value="${autor}"></input><br></br>
+			<input type="text" name="editorial" placeholder="Editorial" th:value="${editorial}"></input><br></br>
+			<input type="number" name="anio" min="1800" max="2099" step="1" value="2018" /><br></br>
+			<textarea name="sinopsis" th:value="${sinopsis}"></textarea><br></br>
+			<label>Géneros</label><br></br>
+			<!--  <input id="genero" type="checkbox" name="genero">Fantasía</input> --> 
+			<input type="text" name="genero" class="genero"></input><br></br>
 			<input type="submit"></input>
 		</form>
 		
