--- a/Proyecto-Libreria/src/main/resources/templates/listadoLibros.html
+++ b/Proyecto-Libreria/src/main/resources/templates/listadoLibros.html
@@ -11,20 +11,23 @@
 	</head>
 
 	<body>
-		<form action="/resultado-busqueda">
-			<input type="text" name="palabraBuscada"></input>
+		<form action="/resultado-busqueda/ + ${busqueda}" method="POST">
+			<input type="text" name="tituloBuscado" placeholder="Buscar por titulo" th:value="${tituloBuscado}"></input>
 			<input type="submit" value="Buscar"></input><br></br>
-			<label>Seleccionar todos</label>
-			<input id="seleccionarTodas" type="checkbox" ></input>
-		
+			<input type="text" name="autorBuscado" placeholder="Buscar por autor" th:value="${autorBuscado}"></input>
+			<input type="submit" value="Buscar"></input><br></br>
 		</form>
+		<input id="seleccionarTodas" type="checkbox" ></input>
+		<label>Seleccionar todos</label><br></br>
 	
 		<div class="tarjeta-libros" th:each="libros:${listadoLibros}">
-			<img th:src="${libros.url_fotolibro}" title="imagenDePortada" class="imagenDePortada"></img><br></br>
+			<img th:src="${libros.url_fotolibro}" title="imagenDePortada" class="verPortada"></img><br></br>
 			<label>Titulo: </label><a th:href="'/detalleLibro/' + ${libros.id}" th:text="${libros.titulo}">Titulo</a><br></br>
 			<label>Autor: </label><label th:text="${libros.autor}">Autor</label><br></br>
 			<label>Editorial: </label><label th:text="${libros.editorial}">Editorial</label><br></br>
 			<label>Año: </label><label th:text="${libros.anio}">2018</label><br></br>
+			<label>Genero: </label><label th:text="${libros.genero}">Genero</label><br></br>
+			<a th:href="'/editarLibro/' + ${libros.id}">Editar libro</a>
 			<a th:href="'/eliminarLibro/' + ${libros.id}">Eliminar libro</a>
 		</div>
 	</body>
