--- a/Proyecto-Libreria/src/main/resources/templates/detalleLibro.html
+++ b/Proyecto-Libreria/src/main/resources/templates/detalleLibro.html
@@ -18,8 +18,9 @@
 			<label>Genero: </label><label th:text="${genero}"></label><br></br>
 			<a href="/listadoDeLibros/">Volver a listado</a>
 		</div>
-		<form action="/procesar-comentario" method="POST">
+		<form th:action="'/procesarComentario/' + ${id}" method="POST">
 			<textarea cols="" name="comentario" placeholder="Agregar comentario..."></textarea>
+			<input type="submit"></input>
 			</form>
 		<div class="tarjeta-comentarios" th:each="comentarios:${listadoComentarios}">
 			<label th:text="${comentarios.comentario}">Comentario</label><br></br>
