--- a/Proyecto-Libreria/src/main/resources/templates/editarLibro.html
+++ b/Proyecto-Libreria/src/main/resources/templates/editarLibro.html
@@ -1,33 +1,37 @@
 <!doctype html>
-<html>
+<html layout:decorator="estructura">
 	<head>
 		<title>Editar Libro</title>
 		<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
 		<script src="https://static.filestackapi.com/v3/filestack.js"></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-		crossorigin="anonymous"></script>
+			crossorigin="anonymous"></script>
 		<script src="/js/imagen.js"></script>
 		<script src="/js/listado.js"></script>
 		<meta charset="UTF-8"></meta>
 	</head>
-
-	<body>
-		<h2>Editar Libro:</h2>
-		<form th:action="'/modificarLibro/' + ${id}" method="POST">
-			<img th:src="${urlImagen}" title="imagenDePerfil" class="verPortada"></img>
-			<input id="urlImagen" type="text" hidden="hidden" name="urlImagen" th:value="${urlImagen}"></input>
-			<input id="subirImagen" type="button"  value="Cambiar Portada"></input><br></br>
-			<label>Titulo: </label> <input type="text" name="titulo" th:value="${titulo}"></input><br></br>
-			<label>Autor: </label> <input name="autor" type="text" th:value="${autor_a}"></input><br></br>
-			<label>Editorial: </label> <input name="editorial" type="text" th:value="${editorial}"></input><br></br>
-			<label>Año: </label><input type="number" name="anio" min="1800" max="2099" step="1" th:value="${anio}" /><br></br>
-			<label>Sinopsis: </label><input id="sinopsis" name="sinopsis" th:value="${sinopsis}"></input><br></br>
-			<label>Géneros</label><br></br>
-			<!--  <input id="genero" type="checkbox" name="genero">Fantasía</input> --> 
-			<input type="text" name="genero" class="genero"  th:value="${genero}"></input><br></br>
-			<input type="submit"></input>
-		</form>
-		
-	</body>
-
+	<body id="page-top" layout:fragment="contenido">
+		<header class="masthead text-center text-white d-flex">
+				<div class="container my-auto">
+				<div class="row">
+				<div class="col-lg-8 mx-auto">
+					<p class="text-faded mb-5">Editar información: </p>
+					<form th:action="'/modificarLibro/' + ${id}" method="POST">
+						<img th:src="${urlImagen}" title="imagenDePerfil" class="verPortada"></img><br></br>
+						<input id="urlImagen" type="text" hidden="hidden" name="urlImagen" th:value="${urlImagen}"></input>
+						<input id="subirImagen" type="button"  value="Cambiar Portada" class="btn btn-primary btn-xs js-scroll-trigger"></input><br></br><br></br>
+						<label>Titulo: </label> <input type="text" name="titulo" th:value="${titulo}" class="formulario"></input><br></br>
+						<label>Autor: </label> <input name="autor" type="text" th:value="${autor_a}" class="formulario"></input><br></br>
+						<label>Editorial: </label> <input name="editorial" type="text" th:value="${editorial}" class="formulario"></input><br></br>
+						<label>Año: </label><input type="number" name="anio" min="1800" max="2099" step="1" th:value="${anio}" class="formulario" /><br></br>
+						<label>Sinopsis: </label><input id="sinopsis" name="sinopsis" th:value="${sinopsis}" class="formulario sinopsis"></input><br></br>
+						<label>Géneros</label><br></br>
+						<input type="text" name="genero" class="genero formulario"  th:value="${genero}"></input><br></br>
+						<input class="btn btn-primary btn-xl js-scroll-trigger" type="submit"></input>
+					</form>
+				</div>
+			</div>
+		</div>
+	</header>
+</body>
 </html>
