--- a/Proyecto-Libreria/src/main/resources/templates/ingresarLibro.html
+++ b/Proyecto-Libreria/src/main/resources/templates/ingresarLibro.html
@@ -1,34 +1,43 @@
 <!doctype html>
-<html>
+<html layout:decorator="estructura">
 	<head>
-		<title>Ingresar Libro</title>
 		<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
-	<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
-	<script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-	crossorigin="anonymous"></script>
-	<script src="/js/imagen.js"></script>
-	<meta charset="UTF-8"></meta>
+		<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+		<script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+		crossorigin="anonymous"></script>
+		<script src="/js/imagen.js"></script>
+		<meta charset="UTF-8"></meta>
 	</head>
 
-	<body>
-		<h2>Datos del nuevo libro: </h2>
-		<label th:text="${mensaje}"></label>
-		
-		<form action="/insertar-nuevoLibro" method="POST">
+<body id="page-top" layout:fragment="contenido">
+	<header class="masthead text-center text-white d-flex">
+      <div class="container my-auto">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <h1 class="text-uppercase">
+              <strong>Ingresar Libro</strong>
+            </h1>
+            <hr></hr>
+          </div>
+          <div class="col-lg-8 mx-auto">
+            <p class="text-faded mb-5">Datos del nuevo libro:</p>
+            <form action="/insertar-nuevoLibro" method="POST">
 			<input id="urlImagen" type="text" hidden="hidden" name="urlImagen"></input>
-			<input id="subirImagen" type="button"  value="Subir Imagen"></input><br></br>
-			<input type="text" name="titulo" placeholder="Titulo del libro" th:value="${titulo}"></input><br></br>
-			<input type="text" name="autor" placeholder="Autor/a" th:value="${autor}"></input><br></br>
-			<input type="text" name="editorial" placeholder="Editorial" th:value="${editorial}"></input><br></br>
-			<input type="number" name="anio" min="1800" max="2099" step="1" value="2018" /><br></br>
-			<textarea name="sinopsis" th:value="${sinopsis}"></textarea><br></br>
-			<label>Géneros</label><br></br>
-			<!--  <input id="genero" type="checkbox" name="genero">Fantasía</input> --> 
-			<input type="text" name="genero" class="genero"></input><br></br>
-			<input type="submit"></input>
+			<input class="btn btn-primary btn-xl js-scroll-trigger"  id="subirImagen" type="button"  value="Subir Imagen"></input><br></br><br></br>
+			<input class="formulario" type="text" name="titulo" placeholder="Titulo del libro" th:value="${titulo}"></input><br></br>
+			<input class="formulario" type="text" name="autor" placeholder="Autor/a" th:value="${autor}"></input><br></br>
+			<input class="formulario" type="text" name="editorial" placeholder="Editorial" th:value="${editorial}"></input><br></br>
+			<label>Año</label>
+			<input class="formulario" type="number" name="anio" min="1800" max="2099" step="1" value="2018"></input><br></br>
+			<textarea class="formulario" name="sinopsis" th:value="${sinopsis}" placeholder="Sinopsis"></textarea><br></br>
+			<label>Género</label>
+			<input type="text" name="genero" class="genero formulario" size="14"></input><br></br>
+			 <input class="btn btn-primary btn-xl js-scroll-trigger" type="submit"></input>
 		</form>
-		
-	</body>
-
+          </div>
+        </div>
+      </div>
+    </header>
+</body>    
 </html>
