--- a/Proyecto-Libreria/src/main/resources/templates/usuarioListado.html
+++ b/Proyecto-Libreria/src/main/resources/templates/usuarioListado.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 	crossorigin="anonymous"></script>
-		<script src="/js/listado.js"></script>
+	<script src="/js/general.js"></script>
 		<meta charset="UTF-8"></meta>
 	</head>
 
