--- a/Proyecto-Libreria/src/main/resources/templates/usuarioEnDetalle.html
+++ b/Proyecto-Libreria/src/main/resources/templates/usuarioEnDetalle.html
@@ -12,7 +12,7 @@
 
 	<body>
 		<div class="tarjeta-libros">
-			<img th:src="${urlImagen}" title="imagenDePerfil" class="imagenDePerfil"></img>
+			<img th:src="${urlImagen}" onerror="https://res.cloudinary.com/dbvpxjxay/image/upload/v1528594098/mi_carpeta/gux7letqf8gdt2abh9x0.png'" title="imagenDePerfil" class="imagenDePerfil"></img>
 			<label>Nombre: </label><label th:text="${nombreDeUsuario}">to</label><br></br>
 			<label>Contraseña: </label><label th:text="${contrasenia}">sdds</label><br></br>
 		</div>
