--- a/Proyecto-Libreria/src/main/resources/templates/editarLibro.html
+++ b/Proyecto-Libreria/src/main/resources/templates/editarLibro.html
@@ -6,8 +6,8 @@
 		<script src="https://static.filestackapi.com/v3/filestack.js"></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 			crossorigin="anonymous"></script>
+		<script src="/js/general.js"></script>
 		<script src="/js/imagen.js"></script>
-		<script src="/js/listado.js"></script>
 		<meta charset="UTF-8"></meta>
 	</head>
 	<body id="page-top" layout:fragment="contenido">
@@ -15,9 +15,9 @@
 				<div class="container my-auto">
 				<div class="row">
 				<div class="col-lg-8 mx-auto">
-					<p class="text-faded mb-5">Editar información: </p>
+					<p class="section-heading text-white">Editar información: </p>
 					<form th:action="'/modificarLibro/' + ${id}" method="POST">
-						<img th:src="${urlImagen}" title="imagenDePerfil" class="verPortada"></img><br></br>
+						<img th:src="${urlImagen}" onerror="this.src='https://res.cloudinary.com/dbvpxjxay/image/upload/v1528593595/mi_carpeta/wfpklnhplbcvjzethqkt.png'" title="imagenDePerfil" class="verPortada"></img><br></br>
 						<input id="urlImagen" type="text" hidden="hidden" name="urlImagen" th:value="${urlImagen}"></input>
 						<input id="subirImagen" type="button"  value="Cambiar Portada" class="btn btn-primary btn-xs js-scroll-trigger"></input><br></br><br></br>
 						<label>Titulo: </label> <input type="text" name="titulo" th:value="${titulo}" class="formulario"></input><br></br>
