--- a/Proyecto-Libreria/src/main/resources/templates/estructura.html
+++ b/Proyecto-Libreria/src/main/resources/templates/estructura.html
@@ -40,7 +40,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger">Proyecto Libreria</a>
+        <a class="navbar-brand js-scroll-trigger" href="/">Proyecto Libreria</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         	 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -92,26 +92,9 @@
     </section>
     <section class="bg-dark text-white">
       <div class="container text-center">
-        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
+        <h2 class="mb-4">Crea una lista con tus libros favoritos</h2>
+        <a class="btn btn-light btn-xl sr-button" href="favoritos">Ir a lista</a>
       </div>
     </section>
  </body>
-    <footer id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-            <p>123-456-6789</p>
-          </div><div class="col-lg-4 mr-auto text-center">
-            <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
-            <p>
-              <a href="/">dshfañodf.com</a>
-            </p>
-          </div>
-          
-        </div>
-      </div>
-    </footer>
-
 </html>
