--- a/Proyecto-Libreria/src/main/resources/templates/listadoFavoritos.html
+++ b/Proyecto-Libreria/src/main/resources/templates/listadoFavoritos.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html layout:decorator="estructura">
 	<head>
-		<title>Listado de Libros</title>
+		<title>Favoritos</title>
 		<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 	crossorigin="anonymous"></script>
@@ -10,30 +10,26 @@
 		<meta charset="UTF-8"></meta>
 	</head>
 
-<body id="page-top" layout:fragment="contenido">
-	<section id="services">
-      <div class="container">
+ <body id="page-top" layout:fragment="contenido">
+    <header class="masthead text-center text-white d-flex favoritos" >
+      <div class="container my-auto">
         <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Buscar libro por: </h2>
-            <form action="/resultado-busqueda/ + ${busqueda}" method="POST">
-			<input type="text" name="tituloBuscado" placeholder="Titulo" th:value="${tituloBuscado}" class="formulario"></input>
-			<input type="submit" value="Buscar" class="btn btn-primary btn-xs js-scroll-trigger"></input><br></br>
-			<input type="text" name="autorBuscado" placeholder="Autor" th:value="${autorBuscado}" class="formulario"></input>
-			<input type="submit" value="Buscar" class="btn btn-primary btn-xs js-scroll-trigger"></input><br></br>
-		</form>
-            <hr class="my-4"></hr>
+          <div class="col-lg-10 mx-auto">
+            <h1 class="text-uppercase">
+              <strong>Favoritos </strong>
+            </h1>
+            <hr></hr>
           </div>
         </div>
       </div>
-    </section>
+    </header>
 
     <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-sm-2 col-sm-1" th:each="libros:${listadoLibros}">
             <a class="portfolio-box" th:href="'/detalleLibro/' + ${libros.id}">
-              <img th:src="${libros.url_fotolibro}" title="imagenDePortada" class="verPortada img-fluid"></img>
+            <img th:src="${libros.url_fotolibro}" onerror="this.src='https://res.cloudinary.com/dbvpxjxay/image/upload/v1528593595/mi_carpeta/wfpklnhplbcvjzethqkt.png'" title="imagenDePortada" class="verPortada img-fluid"></img> 
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded" th:text="${libros.titulo}">
