--- a/Proyecto-Libreria/src/main/resources/templates/detalleLibro.html
+++ b/Proyecto-Libreria/src/main/resources/templates/detalleLibro.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html layout:decorator="estructura">
+<html layout:decorator="estructuraPrincipal">
 	<head>
 		<title>Detalle del Libro</title>
 		<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
@@ -33,7 +33,13 @@
 	    <section class="bg-dark text-white">
       <div class="container text-center">
         <h2 class="mb-4">Comentarios</h2>
-        <a class="btn btn-light btn-xl sr-button" href="">Comentar</a>
+        <form th:action="'/procesarComentario/' + ${id}">
+       <textarea rows="" cols="" name="comentario" th:value="${comentario}"></textarea> 
+         <input class="btn btn-primary btn-xl js-scroll-trigger" type="submit"></input>
+       </form>
+       <div class="col-sm-2 col-sm-1 bg-primary text-center" th:each="comentarios:${listadoComentarios}">
+       <label class="text-center" th:text="${comentarios.comentario}"></label><br></br><br></br>
+       </div>
       </div>
     </section>
 </body>
