--- a/Proyecto-Libreria/src/main/resources/templates/editarLibro.html
+++ b/Proyecto-Libreria/src/main/resources/templates/editarLibro.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html layout:decorator="estructura">
+<html layout:decorator="nav">
 	<head>
 		<title>Editar Libro</title>
 		<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
