--- a/Proyecto-Libreria/src/main/resources/templates/ingresarLibro.html
+++ b/Proyecto-Libreria/src/main/resources/templates/ingresarLibro.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html layout:decorator="estructura">
+<html layout:decorator="estructuraPrincipal">
 	<head>
 		<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
 		<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
