--- a/Proyecto-Libreria/src/main/resources/templates/listadoLibros.html
+++ b/Proyecto-Libreria/src/main/resources/templates/listadoLibros.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html layout:decorator="estructura">
+<html layout:decorator="estructuraPrincipal">
 	<head>
 		<title>Listado de Libros</title>
 		<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
