--- a/Proyecto-Libreria/src/main/resources/templates/login.html
+++ b/Proyecto-Libreria/src/main/resources/templates/login.html
@@ -1,21 +1,28 @@
 <!doctype html>
-<html>
+<html layout:decorator="estructuraPrincipal">
 	<head>
 		<title>Ingresar</title>
 		<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
 		<meta charset="UTF-8"></meta>
 	</head>
-
-	<body>
-		<h2>Ingresar: </h2>
-		<label th:text="${mensaje}">dfjahg</label>
-
+	<body id="page-top" layout:fragment="contenido">
+		<header class="masthead text-center text-white d-flex">
+      <div class="container my-auto">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <h1 class="text-uppercase">
+		<strong>Ingresar: </strong>
+			</h1>
+			<p th:text="${mensaje}">dfjahg</p>
+            <hr></hr>
+          </div>
 		<form action="/procesar-login" method="POST">
-			<input type="text" name="nombre" placeholder="nombre..."></input>
+			<input type="text" name="nombre" placeholder="nombre..."></input><br></br><br></br>
 			 <input type="password" name="contrasenia" placeholder="contraseña..."></input>
-			  <input type="submit"></input>
+			  <input class="btn btn-primary btn-xl js-scroll-trigger" type="submit"></input>
 		</form>
-
-</body>
-
+          </div>
+        </div>
+    </header>
+</body>    
 </html>
