--- a/Proyecto-Libreria/src/main/resources/templates/usuarioEditar.html
+++ b/Proyecto-Libreria/src/main/resources/templates/usuarioEditar.html
@@ -1,28 +1,40 @@
 <!doctype html>
-<html>
+<html layout:decorator="nav">
 	<head>
-		<title>Editar Usuario</title>
-		<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
-		<script src="https://static.filestackapi.com/v3/filestack.js"></script>
+		<title>Editar Cuenta</title>
+			<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
+		<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+		<script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-	crossorigin="anonymous"></script>
-	<script src="/js/imagen.js"></script>
+		crossorigin="anonymous"></script>
+		<script src="/js/imagen.js"></script>
 		<meta charset="UTF-8"></meta>
 	</head>
 
-	<body>
-		<h2>Ingrese sus datos: </h2>
-		<label th:text="${mensaje}"></label>
-		
+	<body id="page-top" layout:fragment="contenido">
+	<header class="masthead text-center text-white d-flex detalle">
+      <div class="container my-auto">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <h1 class="text-uppercase">
+              <strong>Ingresar Libro</strong>
+            </h1>
+            <hr></hr>
+            </div>
+          <div class="col-lg-8 mx-auto">
+            <p class="text-faded mb-5">Ingrese los datos:</p>
+            <p class="text-faded mb-5" th:text="${mensaje}">mensaje</p>
 		<form th:action="'/modificarUsuario/' + ${id}" method="POST">
-			<img th:src="${urlImagen}" onerror="https://res.cloudinary.com/dbvpxjxay/image/upload/v1528594098/mi_carpeta/gux7letqf8gdt2abh9x0.png'" title="imagenDePerfil" class="verImagenPerfil"></img>
+			<img th:src="${urlImagen}" onerror="this.src='https://res.cloudinary.com/dbvpxjxay/image/upload/v1528594098/mi_carpeta/gux7letqf8gdt2abh9x0.png'" title="imagenDePerfil" class="verImagenPerfil"></img>
 			<input id="urlImagen" hidden="hidden" type="text" name="urlImagen" th:value="${urlImagen}"></input>
-			<input id="subirImagen" type="button"  value="Cambiar foto"></input><br></br>
+			<input class="btn btn-primary btn-xs js-scroll-trigger" id="subirImagen" type="button"  value="Cambiar foto"></input><br></br><br></br>
 			<input type="text" name="nombre" placeholder="Nombre de usuario" th:value="${nombreDeUsuario}"></input>
 			<input type="password" name="contrasenia" placeholder="Contraseña" th:value="${contrasenia}"></input>
-			<input type="submit" value="Enviar"></input>
+		 <input class="btn btn-primary btn-xl js-scroll-trigger" type="submit"></input>
 		</form>
-		
-	</body>
-
+          </div>
+        </div>
+      </div>
+    </header>
+</body>    
 </html>
