--- a/Proyecto-Libreria/src/main/resources/templates/usuarioEnDetalle.html
+++ b/Proyecto-Libreria/src/main/resources/templates/usuarioEnDetalle.html
@@ -1,21 +1,30 @@
 <!doctype html>
-<html>
+<html layout:decorator="nav">
 	<head>
-	 <title>Detalle Usuario</title>
+	 <title>Perfil</title>
 		<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
 	<script src="https://static.filestackapi.com/v3/filestack.js"></script>
+		<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+		<script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 	crossorigin="anonymous"></script>
 	<script src="/js/imagen.js"></script>
 		<meta charset="UTF-8"></meta>
 	</head>
-
-	<body>
-		<div class="tarjeta-libros">
-			<img th:src="${urlImagen}" onerror="https://res.cloudinary.com/dbvpxjxay/image/upload/v1528594098/mi_carpeta/gux7letqf8gdt2abh9x0.png'" title="imagenDePerfil" class="imagenDePerfil"></img>
-			<label>Nombre: </label><label th:text="${nombreDeUsuario}">to</label><br></br>
-			<label>Contraseña: </label><label th:text="${contrasenia}">sdds</label><br></br>
-		</div>
+	<body id="page-top" layout:fragment="contenido">
+		<header class="masthead text-center text-white d-flex detalle">
+				<div class="container my-auto">
+				<div class="row">
+				<div class="col-lg-8 mx-auto">
+			<img th:src="${urlImagen}" onerror="this.src='https://res.cloudinary.com/dbvpxjxay/image/upload/v1528594098/mi_carpeta/gux7letqf8gdt2abh9x0.png'" 
+			title="imagenDePerfil" class="verImagenPerfil"></img>
+			<p class="section-heading text-white" th:text="${nombreDeUsuario}">Nombre</p>
+			</div>
+			</div>
+			 <a class="btn btn-light btn-xl js-scroll-trigger" th:href="'/editarUsuario/'+ ${id}">Editar Cuenta</a>
+			 <a class="btn btn-light btn-xl js-scroll-trigger" th:href="'/listadoDeFavoritos/'+ ${id_usuario}">Favoritos</a>
+			 <a class="btn btn-light btn-xl js-scroll-trigger" th:href="'/eliminarUsuario/' + ${id}">Eliminar Cuenta</a>
+			</div>
+		</header>
 	</body>
-
 </html>
