--- a/Proyecto-Libreria/src/main/resources/templates/usuarioRegistro.html
+++ b/Proyecto-Libreria/src/main/resources/templates/usuarioRegistro.html
@@ -1,30 +1,35 @@
 <!doctype html>
-<html>
+<html layout:decorator="estructuraPrincipal">
 	<head>
 		<title>Registrar nuevo Usuario</title>
-	<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
-	<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
-	<script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-	crossorigin="anonymous"></script>
-	<script src="/js/imagen.js"></script>
-	<meta charset="UTF-8"></meta>
-		
+		<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
+		<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+		<script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+		crossorigin="anonymous"></script>
+		<script src="/js/imagen.js"></script>
+		<meta charset="UTF-8"></meta>
 	</head>
-
-	<body>
-		<h2>Registrar usuario: </h2>
-		<label th:text="${mensaje}"></label>
-		
-			
+	<body id="page-top" layout:fragment="contenido">
+		<header class="masthead text-center text-white d-flex">
+      <div class="container my-auto">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <h1 class="text-uppercase">
+		<strong>Registrar usuario: </strong>
+			</h1>
+            <hr></hr>
+          </div>
+          <label th:text="${mensaje}"></label>
 		<form action="/nuevoUsuario" method="POST">
 			<input id="urlImagen" hidden="hidden" type="text" name="urlImagen"></input>
-			<input id="subirImagen" type="button"  value="Subir Imagen"></input>
+			<input class="btn btn-primary btn-xs js-scroll-trigger" id="subirImagen" type="button"  value="Subir Imagen"></input>
 			<input type="text" name="nombre" placeholder="Nombre de usuario" th:value="${nombreDeUsuario}" maxlength="40"></input>
 			<input type="password" name="contrasenia" placeholder="Contraseña" th:value="${contrasenia}"></input>
-			<input type="submit" value="Enviar"></input>
+			<input class="btn btn-primary btn-xl js-scroll-trigger"  type="submit" value="Enviar"></input>
 		</form>
-		
-	</body>
-
+          </div>
+        </div>
+    </header>
+</body>    
 </html>
