--- a/Proyecto-Libreria/src/main/resources/templates/listadoLibros.html
+++ b/Proyecto-Libreria/src/main/resources/templates/listadoLibros.html
@@ -21,7 +21,7 @@
             <hr></hr>
             <form action="/resultado-busqueda/ + ${busqueda}" method="POST">
 			<input type="text" name="tituloBuscado" placeholder="Titulo" th:value="${tituloBuscado}" class="formulario"></input>
-			<input type="submit" value="Buscar" class="btn btn-primary btn-xs js-scroll-trigger"></input><br></br>
+			<input type="submit" value="Buscar" class="btn btn-primary btn-xs js-scroll-trigger"></input><br></br><br></br>
 			<input type="text" name="autorBuscado" placeholder="Autor" th:value="${autorBuscado}" class="formulario"></input>
 			<input type="submit" value="Buscar" class="btn btn-primary btn-xs js-scroll-trigger"></input><br></br>
 		</form>
